# GLCars2

./: CMakeLists.txt
res/models/car/: car.mtl
res/shaders/: basic.frag  basic.vert
src/: main.cpp  shader.hpp  window.hpp
